// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field #render input tag should render component type "checkbox" 1`] = `
<gux-form-field>
  <!---->
  <div>
    <gux-input-checkbox>
      <!---->
      <div class="gux-input-checkbox-container">
        <input id="gux-form-field-i" slot="input" type="checkbox" value="test">
        <label for="gux-form-field-i" slot="label">
          Test
        </label>
      </div>
    </gux-input-checkbox>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "checkbox" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div>
    <gux-input-checkbox class="gux-input-error">
      <!---->
      <div class="gux-input-checkbox-container">
        <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="checkbox" value="test">
        <label for="gux-form-field-i" slot="label">
          Test
        </label>
      </div>
    </gux-input-checkbox>
    <div class="gux-error" id="gux-form-field-error-i">
      <gux-error-message-beta>
        <span slot="error">
          Error Message
        </span>
      </gux-error-message-beta>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "color" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-color>
        <!---->
        <section>
          <button class="gux-input-color-main-element" type="button">
            <div class="gux-input-color-selected-color" style="background: test;"></div>
            <div class="gux-input-color-color-name">
              test
            </div>
            <gux-icon decorative="" icon-name="chevron-small-down"></gux-icon>
          </button>
          <gux-color-select class="gux-input-color-color-select">
            <input id="gux-form-field-i" slot="input" type="color" value="test">
          </gux-color-select>
        </section>
      </gux-input-color>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "color" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-color class="gux-input-error">
        <!---->
        <section>
          <button class="gux-input-color-main-element" type="button">
            <div class="gux-input-color-selected-color" style="background: test;"></div>
            <div class="gux-input-color-color-name">
              test
            </div>
            <gux-icon decorative="" icon-name="chevron-small-down"></gux-icon>
          </button>
          <gux-color-select class="gux-input-color-color-select">
            <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="color" value="test">
          </gux-color-select>
        </section>
      </gux-input-color>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "email" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-text-like slot="input">
        <!---->
        <div class="gux-input-container">
          <input id="gux-form-field-i" slot="input" type="email" value="test">
        </div>
      </gux-input-text-like>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "email" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-text-like class="gux-input-error" slot="input">
        <!---->
        <div class="gux-input-container">
          <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="email" value="test">
        </div>
      </gux-input-text-like>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "number" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-number slot="input">
        <input id="gux-form-field-i" slot="input" type="number" value="test">
      </gux-input-number>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "number" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-number class="gux-input-error" slot="input">
        <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="number" value="test">
      </gux-input-number>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "password" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-text-like slot="input">
        <!---->
        <div class="gux-input-container">
          <input id="gux-form-field-i" slot="input" type="password" value="test">
        </div>
      </gux-input-text-like>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "password" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-text-like class="gux-input-error" slot="input">
        <!---->
        <div class="gux-input-container">
          <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="password" value="test">
        </div>
      </gux-input-text-like>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "radio" 1`] = `
<gux-form-field>
  <!---->
  <gux-input-radio>
    <!---->
    <div class="gux-input-radio-container">
      <input id="gux-form-field-i" slot="input" type="radio" value="test">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
  </gux-input-radio>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "radio" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <span hidden="" slot="error">
    Error Message
  </span>
  <gux-input-radio>
    <!---->
    <div class="gux-input-radio-container">
      <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="radio" value="test">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
  </gux-input-radio>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "range" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <gux-input-range>
      <!---->
      <div class="gux-container">
        <div class="gux-range">
          <div class="gux-track">
            <div class="gux-progress" style="width: NaN%;"></div>
          </div>
          <input id="gux-form-field-i" slot="input" type="range" value="test">
          <div class="gux-hidden gux-range-tooltip-container">
            <div class="gux-range-tooltip" style="left: NaN%;">
              test
            </div>
          </div>
        </div>
        <div class="gux-display">
          test
        </div>
      </div>
    </gux-input-range>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "range" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <span hidden="" slot="error">
    Error Message
  </span>
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <gux-input-range>
      <!---->
      <div class="gux-container">
        <div class="gux-range">
          <div class="gux-track">
            <div class="gux-progress" style="width: NaN%;"></div>
          </div>
          <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="range" value="test">
          <div class="gux-hidden gux-range-tooltip-container">
            <div class="gux-range-tooltip" style="left: NaN%;">
              test
            </div>
          </div>
        </div>
        <div class="gux-display">
          test
        </div>
      </div>
    </gux-input-range>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "search" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-search>
        <input id="gux-form-field-i" slot="input" type="search" value="test">
      </gux-input-search>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "search" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-search>
        <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="search" value="test">
      </gux-input-search>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "text" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-text-like slot="input">
        <!---->
        <div class="gux-input-container">
          <input id="gux-form-field-i" slot="input" type="text" value="test">
        </div>
      </gux-input-text-like>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "text" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Test
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-text-like class="gux-input-error" slot="input">
        <!---->
        <div class="gux-input-container">
          <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="text" value="test">
        </div>
      </gux-input-text-like>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "unknown" 1`] = `
<gux-form-field>
  <!---->
  <div>
    <label for="gux-form-field-i" slot="label">
      Test
    </label>
    <input id="gux-form-field-i" slot="input" type="unknown" value="test">
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render input tag should render component type "unknown" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div>
    <label for="gux-form-field-i" slot="label">
      Test
    </label>
    <input aria-describedby="gux-form-field-error-i" id="gux-form-field-i" slot="input" type="unknown" value="test">
    <span slot="error">
      Error Message
    </span>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render select tag should render component type "select" 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Select
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-select slot="input">
        <select id="gux-form-field-i" name="select" slot="input" type="select">
          <option value="option1">
            Option 1
          </option>
          <option value="option1">
            Option 2
          </option>
          <option value="option1">
            Option 3
          </option>
        </select>
      </gux-input-select>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render select tag should render component type "select" and keep user provided id and for attributes 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="test" slot="label">
        Select
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-select class="gux-input-error" slot="input">
        <select aria-describedby="gux-form-field-error-i" id="test" name="select" slot="input" type="select">
          <option value="option1">
            Option 1
          </option>
          <option value="option1">
            Option 2
          </option>
          <option value="option1">
            Option 3
          </option>
        </select>
      </gux-input-select>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;

exports[`gux-form-field #render select tag should render component type "select" with an error slot 1`] = `
<gux-form-field>
  <!---->
  <div class="gux-above gux-label-and-input-and-error-container">
    <div class="gux-label-container">
      <label for="gux-form-field-i" slot="label">
        Select
      </label>
    </div>
    <div class="gux-input-and-error-container">
      <gux-input-select class="gux-input-error" slot="input">
        <select aria-describedby="gux-form-field-error-i" id="gux-form-field-i" name="select" slot="input" type="select">
          <option value="option1">
            Option 1
          </option>
          <option value="option1">
            Option 2
          </option>
          <option value="option1">
            Option 3
          </option>
        </select>
      </gux-input-select>
      <div class="gux-error" id="gux-form-field-error-i">
        <gux-error-message-beta>
          <span slot="error">
            Error Message
          </span>
        </gux-error-message-beta>
      </div>
    </div>
  </div>
</gux-form-field>
`;
